import React from 'react';
import renderer from 'react-test-renderer';
import { ProductImage, ProductCard } from '../../src/components';
import { product2 } from '../data/products';


describe('ProductImage', () => {
        
  test('should render the component with the custom image', () => {
    const wrapper = renderer.create(
        <ProductImage img="https://jbc.com/hello.jpg" />
    )

    expect(wrapper.toJSON()).toMatchSnapshot();
  });

  test('should render the component with the image of the product', () => {
    
    const wrapper = renderer.create(
        <ProductCard product={product2}>
            {
                () => (
                    <ProductImage />
                )
            }
        </ProductCard>
    )

    expect(wrapper.toJSON()).toMatchSnapshot();

  });
  

});
