// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage should render the component with the custom image 1`] = `
<img
  alt="Product Image"
  className="productImg undefined"
  src="https://jbc.com/hello.jpg"
/>
`;

exports[`ProductImage should render the component with the image of the product 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;
